feat: navigation and routines

--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
