--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ilamy/calendar": "^1.0.2",
     "@tailwindcss/vite": "^4.1.17",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "moment": "^2.30.1",
     "motion": "^12.23.24",
     "react": "^19.1.1",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
     "react-slick": "^0.31.0",
+    "recharts": "^3.3.0",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.17"
