--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ilamy/calendar": "^1.0.2",
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
     "moment": "^2.30.1",
